[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="mmapuccino"
version="0.0.1"
description="A simple wrapper around memmapped allocator that makes it simpler to exchange between RAM and disc allocation of numpy arrays."
readme="README.md"
authors=[
    {name="MatteoLacki",email="matteo.lacki@gmail.com"},
]
dependencies = [
    "numpy",
    "dictodot @git+https://github.com/MatteoLacki/dictodot.git",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest",
]


[project.scripts]
example_shell_script = "mmapuccino.cli.example_shell_script:example_shell_script"

[project.urls]
homepage="https://github.com/MatteoLacki/mmapuccino.git"
repository="https://github.com/MatteoLacki/mmapuccino.git"

[tool.uv]
reinstall-package = ["mmapuccino"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mmapuccino = ["data/*.csv"]
